Image tag fixed from next/image

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -15,7 +15,7 @@
     padding: $sectionGap 0;
     color: $beige;
     
-    img{
+    .aboout_logo{
         display: flex;
         width: auto;
         margin: 0 auto 60px;
