--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -150,3 +150,9 @@ h2{
         margin-bottom: 20px;
     }
 }
+
+.flex-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
