--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -87,8 +87,27 @@
     }
 }
 
+.name{
+    padding-top: 0;
+
+    &_box{
+        border: 2px solid $beige;
+        padding: 40px;
+        padding-bottom: 0;
+
+        p{
+            font-size: 1.25em;
+            line-height: 1.5;
+            margin-top: 40px;
+        }
+
+        a{
+            margin-bottom: -22.5px;
+        }
+    }
+}
+
 .quote{
-    //background: url('../public/img/point-lookout.jpeg') no-repeat center center /cover;
     position: relative;
     z-index: 0;
 
