--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -156,3 +156,35 @@ h2{
     justify-content: center;
     align-items: center;
 }
+
+
+//slick slider style
+.slick-list{
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+
+    .slick-slide{
+        // margin: 0 40px;
+        opacity: 0;
+    }
+}
+
+.slider {
+    // display: flex;
+    // align-items: center;
+    // justify-content: flex-start;
+    position: relative;
+    // overflow: hidden;
+    .slide{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        // display: none;
+        // opacity: 0;
+
+        &:last-of-type{
+            opacity: 0;
+            // position: absolute;
+        }
+    }
+}
