--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -7,18 +7,19 @@
     cursor: pointer;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: $beige;
+    border-radius: 30px;
 
     &:hover{
         opacity: 1;
-        color: $green;
+        color: $beige;
+        background-color: $red;
     }
 
     svg{
         width: 45px;
         height: 45px;
-        background-color: $beige;
         padding: 15px;
-        border-radius: 30px;
     }
 }
 
