--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -30,6 +30,8 @@
             .nav_item{
                 padding: 29px 25px;
                 text-transform: uppercase;
+                font-size: 14px;
+                font-weight: 600;
             }
         }
     
