--- a/styles/PageHero.Module.scss
+++ b/styles/PageHero.Module.scss
@@ -5,6 +5,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 
     display: flex;
     align-items: center;
