--- a/styles/WhoWeAre.Module.scss
+++ b/styles/WhoWeAre.Module.scss
@@ -3,3 +3,25 @@
 .who_we_are{
     background-color: $red;
 }
+
+.russell{
+    position: relative;
+    z-index: 0;
+
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: transparentize($green, .6);
+        z-index: -1;
+    }
+
+    .russell_box{
+        border: 2px solid $beige;
+        padding: 40px;
+        padding-bottom: 0;
+    }
+}
