testing the deploy issue

--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -32,6 +32,10 @@
                 text-transform: uppercase;
                 font-size: 14px;
                 font-weight: 600;
+                a{
+                    color: inherit;
+                    text-decoration: none;
+                }
             }
         }
     
