--- a/styles/PageHero.Module.scss
+++ b/styles/PageHero.Module.scss
@@ -11,6 +11,20 @@
     align-items: center;
     justify-content: center;
 
+    position: relative;
+    z-index: 0;
+
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: transparentize($black, .6);
+        z-index: -1;
+    }
+
     h1{
         margin-bottom: 0 !important;
     }
