--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,86 +1,97 @@
 @import '_variables.scss';
 
-.scroll_to_top {
-    position: absolute;
-    top: 0;
-    color: $green;
-    cursor: pointer;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: $beige;
-    border-radius: 30px;
 
-    &:hover{
-        opacity: 1;
-        color: $beige;
-        background-color: $red;
-    }
-
-    svg{
-        width: 45px;
-        height: 45px;
-        padding: 15px;
-    }
-}
-
-.footer_nav{
+.footer {
+    width: 100%;
     display: flex;
-    padding: 0;
-    margin: 0;
-
-    li{
-        padding: 0 15px;
-        color: transparentize($beige, .5);
-        font-size: .81rem;
-        border-right: 1px solid;
-        line-height: 1;
-        justify-content: center;
-        align-items: center;
-
-        &:last-child{
-            border-right: none;
-        }
-    }
-}
-
-.footer_social{
-    display: flex;
-    align-items: center;
     justify-content: center;
-    margin-top: 30px;
-
-    a{
+    align-items: center;
+    text-align: center;
+    color: $beige;
+    position: relative;
+    
+    .scroll_to_top {
+        position: absolute;
+        top: 0;
+        color: $green;
+        cursor: pointer;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: $beige;
         border-radius: 30px;
-        margin: 0 10px;
-        background: $beige;
+    
+        &:hover{
+            opacity: 1;
+            color: $beige;
+            background-color: $red;
+        }
+    
         svg{
             width: 45px;
             height: 45px;
             padding: 15px;
-            color: $green;
-            transition: all .3s ease;
         }
-
-        &:hover{
-            opacity:1;
-            background-color: $red;
-            svg{
-                color: $beige;
+    }
+    
+    .footer_nav{
+        display: flex;
+        padding: 0;
+        margin: 0;
+    
+        li{
+            padding: 0 15px;
+            color: transparentize($beige, .5);
+            font-size: .81rem;
+            border-right: 1px solid;
+            line-height: 1;
+            justify-content: center;
+            align-items: center;
+    
+            &:last-child{
+                border-right: none;
             }
         }
     }
-}
-
-.footnote{
-    font-size: .81rem;
-    margin-top: 30px;
-
-    a{
-        color: inherit;
-        text-decoration: none;
-
-        &[target="_blank"]{
-            text-decoration: underline;
+    
+    .footer_social{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 30px;
+    
+        a{
+            border-radius: 30px;
+            margin: 0 10px;
+            background: $beige;
+            svg{
+                width: 45px;
+                height: 45px;
+                padding: 15px;
+                color: $green;
+                transition: all .3s ease;
+            }
+    
+            &:hover{
+                opacity:1;
+                background-color: $red;
+                svg{
+                    color: $beige;
+                }
+            }
+        }
+    }
+    
+    .footnote{
+        font-size: .81rem;
+        margin-top: 30px;
+    
+        a{
+            color: inherit;
+            text-decoration: none;
+    
+            &[target="_blank"]{
+                text-decoration: underline;
+            }
         }
     }
 }
