--- a/styles/WhoWeAre.Module.scss
+++ b/styles/WhoWeAre.Module.scss
@@ -23,5 +23,9 @@
         border: 2px solid $beige;
         padding: 40px;
         padding-bottom: 0;
+
+        a{
+            margin-bottom: -22.5px;
+        }
     }
 }
