--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -27,9 +27,10 @@
         }
     
         svg{
-            width: 45px;
-            height: 45px;
+            width: 45px !important;
+            height: 45px !important;
             padding: 15px;
+            display: flex;
         }
     }
     
@@ -64,11 +65,12 @@
             margin: 0 10px;
             background: $beige;
             svg{
-                width: 45px;
-                height: 45px;
+                width: 45px !important;
+                height: 45px !important;
                 padding: 15px;
                 color: $green;
                 transition: all .3s ease;
+                display: flex;
             }
     
             &:hover{
