--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -28,13 +28,15 @@
             color: $beige;
     
             .nav_item{
-                padding: 29px 25px;
                 text-transform: uppercase;
                 font-size: 14px;
                 font-weight: 600;
                 a{
+                    display: flex;
+                    padding: 29px 25px;
                     color: inherit;
                     text-decoration: none;
+                    transition: opacity .3s ease;
                 }
             }
         }
