--- a/styles/News.module.scss
+++ b/styles/News.module.scss
@@ -18,7 +18,7 @@
     }
 
     .news_description{
-        .news_external_link a{
+        a{
             color: $red;
             font-weight: 800;
         }
