--- a/styles/PortfolioItem.module.scss
+++ b/styles/PortfolioItem.module.scss
@@ -5,6 +5,32 @@
     &:first-of-type{ margin-top: 0; }
     &:last-of-type{ margin-bottom: 0; }
 
+    .book {
+        .portfolio__image{
+            > div{
+                display: flex;
+                position: relative;
+                > div { z-index: 9; } //image container div created by next/image
+                .book_name{
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background: transparentize($black, .8);
+                    z-index: 0;
+                    top: 70px;
+                    left: 70px;
+                    p{
+                        font-size: 22px;
+                        color: $beige;
+                        font-weight: 800;
+                        writing-mode: vertical-rl;
+                        text-orientation: mixed;
+                    }
+                }
+            }
+        }
+    }
+
     .wrapper{
         display: flex;
 
@@ -18,7 +44,7 @@
         }
 
         .portfolio__info{
-            .portfolio__title{
+            h4{
                 font-size: 23px;
                 font-style: italic;
                 font-weight: 600;
@@ -26,7 +52,7 @@
                 line-height: 1.5;
             }
 
-            .portfolio__description{
+            p{
                 margin: 30px 0 0 25px;
                 padding-left: 25px;
                 padding-bottom: 30px;
@@ -42,7 +68,7 @@
             .portfolio__info{
                 text-align: right;
 
-                .portfolio__description{
+                p{
                     margin: 30px 25px 0 0;
                     padding-right: 25px;
                     padding-bottom: 30px;
