--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -5,45 +5,96 @@
     width: 100%;
     z-index: 10;
 
+    .mobile_nav{
+        @include desktop-only {
+            display: none;
+        }
+
+        position: absolute;
+        color: $green;
+        cursor: pointer;
+        top: 40px;
+        right: 40px;
+        background-color: $beige;
+        border-radius: 30px;
+        z-index: 9;
+
+        svg{
+            width: 45px !important;
+            height: 45px !important;
+            padding: 15px;
+            display: flex;
+        }
+    }
+
     .navbar{
         display: flex;
         width: 100%;
-
-        .logo{
-            width:100%;
-            max-width: 114px;
-            border-bottom-left-radius: 4px;
-            border-bottom-right-radius: 4px;
-            position: absolute;
-            min-height: 100%;
-            height: auto;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-    
-        .main_nav{
-            display: flex;
-            list-style: none;
-            color: $beige;
-    
-            .nav_item{
-                text-transform: uppercase;
-                font-size: 14px;
-                font-weight: 600;
-                a{
-                    display: flex;
-                    padding: 29px 25px;
-                    color: inherit;
-                    text-decoration: none;
-                    transition: opacity .3s ease;
-                }
+        @include tablet {
+            position: fixed;
+            background: $red;
+            width: 100%;
+            height: 100vh;
+            transform: translate3d(0, -100%, 0);
+            opacity: 0;
+            transition: all .3s ease;
+            &.mobile_open {
+                transform: translate3d(0,0,0);
+                opacity: 1;
             }
         }
-    
-        ul{
-            padding: 0 !important;
-            margin: 0 !important;
+
+
+        div{
+            @include tablet {
+                flex-direction: column;
+            }
+            .logo{
+                width:100%;
+                max-width: 114px;
+                border-bottom-left-radius: 4px;
+                border-bottom-right-radius: 4px;
+                position: absolute;
+                min-height: 100%;
+                height: auto;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                @include tablet {
+                    display: none;
+                }
+            }
+        
+            .main_nav{
+                display: flex;
+                list-style: none;
+                color: $beige;
+                @include tablet {
+                    flex-direction: column;
+                    width: 100%;
+                }
+        
+                .nav_item{
+                    text-transform: uppercase;
+                    font-size: 14px;
+                    font-weight: 600;
+                    a{
+                        display: flex;
+                        padding: 29px 25px;
+                        color: inherit;
+                        text-decoration: none;
+                        transition: opacity .3s ease;
+                        @include tablet {
+                            padding: 15px;
+                        }
+                    }
+                }
+            }
+        
+            ul{
+                padding: 0 !important;
+                margin: 0 !important;
+            }
         }
     }
 }
