--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,3 +5,25 @@ $black: #000;
 $white: #fff;
 
 $sectionGap: 100px;
+
+$bplarge : 990px;
+$bpsmall: 768px;
+
+@mixin tablet {
+    @media (max-width: $bplarge) { 
+        @content; 
+    }
+}
+
+@mixin desktop-only {
+    @media (min-width: $bplarge) { 
+        @content; 
+    }
+}
+
+@mixin mobile-only {
+    @media (max-width: $bpsmall) { 
+        @content; 
+    }
+}
+  
