--- a/styles/Articles.module.scss
+++ b/styles/Articles.module.scss
@@ -1,3 +1,4 @@
+@import 'variables';
 .articles{
     .article{
         display: flex;
@@ -6,11 +7,44 @@
         background: transparent no-repeat center center /cover;
         padding: 30px 20px;
         justify-content: space-between;
+        @include tablet {
+            margin-bottom: 30px;
+
+        }
     }
 
     .center_btn{
         margin: 40px auto 0;
         display: flex;
         justify-content: center;
+    }
+}
+
+
+//modal styling
+.modal{
+    > div {
+        max-width: $bplarge;
+        >div {
+            border: none;
+
+            .close {
+                width: 45px;
+                height: 45px;
+                border-radius: 30px;
+                background: $beige !important;
+                border: none;
+                padding: 0;
+                svg {
+                    color: $green !important;
+                    padding: 15px;
+                }
+            }
+            .article_image {
+                width: 100%;
+                height: 250px;
+                position: relative;
+            }
+        }
     }
 }
