--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -38,6 +38,10 @@
         display: flex;
         padding: 0;
         margin: 0;
+
+        @include tablet {
+            flex-direction: column;
+        }
     
         li{
             padding: 0 15px;
@@ -47,6 +51,16 @@
             line-height: 1;
             justify-content: center;
             align-items: center;
+
+            @include tablet {
+                border: none;
+                padding: 10px 0;
+            }
+
+            a {
+                color: inherit;
+                text-decoration: none;
+            }
     
             &:last-child{
                 border-right: none;
