--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -135,6 +135,11 @@ h1{
     font-size: 3.8em !important;
     font-weight: 800 !important;
     color: $beige;
+
+    @include tablet {
+        font-size: 2.7em !important;
+    }
+
     &.title{
         text-align: center;
         text-transform: uppercase;
@@ -146,6 +151,11 @@ h2{
     font-size: 2.8em !important;
     font-weight: 800 !important;
     color: $beige;
+
+    @include tablet {
+        font-size: 2.2em !important;
+    }
+
     &.title{
         text-align: center;
         text-transform: uppercase;
