--- a/styles/News.module.scss
+++ b/styles/News.module.scss
@@ -15,6 +15,11 @@
         font-size: 30px;
         font-weight: 800;
         margin-bottom: 40px;
+
+        @include mobile-only {
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
     }
 
     .news_description{
