--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,7 +21,15 @@ body {
         line-height: 22px;
     }
     h1, h2, h3{ font-weight: 800; color: $beige }
-    h5{ font-size: 1.3rem /*1.878rem*/; line-height: 1.6; color: $beige; letter-spacing: 2px;}
+    h5{ 
+        font-size: 1.3rem /*1.878rem*/; 
+        line-height: 1.6; 
+        color: $beige; 
+        letter-spacing: 2px;
+        @include mobile-only {
+            font-size: 1rem;
+        }
+    }
 }
 
 ::-webkit-scrollbar-thumb {
@@ -140,6 +148,10 @@ h1{
         font-size: 2.7em !important;
     }
 
+    @include mobile-only {
+        font-size: 1.8em !important;
+    }
+
     &.title{
         text-align: center;
         text-transform: uppercase;
@@ -189,10 +201,18 @@ h2{
     
     &.leftBtn{
         left: -20%;
+        @include mobile-only {
+            left: -2%;
+            z-index: 1;
+        }
     }
 
     &.rightBtn{
         right: -20%;
+        @include mobile-only {
+            right: -2%;
+            z-index: 1;
+        }
     }
 }
 
