--- a/styles/Books.module.scss
+++ b/styles/Books.module.scss
@@ -3,5 +3,11 @@
 .books{
     > div:nth-child(odd){
         background-color: $red;
+
+        a{
+            &:hover {
+                background: $green;
+            }
+        }
     }
 }
