--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -47,6 +47,7 @@ a{
     color: inherit;
     text-decoration: underline;
     transition: all .5s ease;
+    cursor: pointer;
     
     &:hover{
         text-decoration: underline;
@@ -77,6 +78,15 @@ a{
                 background-color: $red;
                 color: $beige;
                 opacity: 1;
+            }
+
+            &.red {
+                background-color: $red;
+                color: $beige;
+                &:hover {
+                    background-color: $beige;
+                    color: $red;
+                }
             }
 
             &.alt-green{
@@ -233,5 +243,35 @@ h2{
             opacity: 0;
             // position: absolute;
         }
+    }
+}
+
+
+//CONTACT FORM
+.MuiInputLabel-root{
+    color: transparentize($beige, .1);
+    &.Mui-focused {
+        color: transparentize($beige, .7);
+    }
+}
+
+.MuiInputBase-colorPrimary{
+    background-color: transparentize($color: #000000, $amount: .75);
+    &:before {
+        border-bottom-color: transparentize($beige, .7);
+    }
+
+    &:after {
+        border-bottom-color: $beige;
+    }
+
+    &:hover {
+        &:before {
+            border-bottom-color: transparentize($beige, .4) !important;
+        }
+    }
+
+    input, textarea {
+        color: $beige;
     }
 }
