--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -201,7 +201,7 @@ h2{
     border: none !important;
 
     svg{
-        width: 45px;
+        width: 45px !important;
         height: 45px;
         border-radius: 30px !important;
         background: $beige !important;
