--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -25,6 +25,7 @@
         //@media screen and (min-width: 768px) {
         @include desktop-only{
             padding-bottom: 20px;
+            padding-top: 20px;
             border-right: 1px solid $beige;
         }
         padding-top: 40px;
