--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -1,4 +1,4 @@
-@import '_variables.scss';
+@import 'variables';
 
 .header{
     position: fixed;
@@ -60,6 +60,7 @@
                 top: 0;
                 left: 50%;
                 transform: translateX(-50%);
+                cursor: pointer;
                 @include tablet {
                     display: none;
                 }
