--- a/styles/Articles.module.scss
+++ b/styles/Articles.module.scss
@@ -52,6 +52,8 @@
                 width: 100%;
                 height: 250px;
                 position: relative;
+                border-top-left-radius: .3rem;
+                border-top-right-radius: .3rem;
                 overflow: hidden;
 
                 > div {
