--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -99,3 +99,28 @@
         }
     }
 }
+
+//nav contact
+.nav_contact {
+    a {
+        position: fixed;
+        right: 0;
+        z-index: 99999;
+        background: $red;
+        color: $beige;
+        text-decoration: none;
+        padding: 30px 7px;
+        text-transform: uppercase;
+        font-size: 0.88rem;
+        font-weight: 600;
+        writing-mode: vertical-rl;
+        top: 50vh;
+        transform: translateY(-50%);
+        box-shadow: 0 0 20px 5px rgb(0, 0, 0, 0.15);
+    
+        &:hover {
+            color: $beige;
+            text-decoration: none;
+        }
+    }
+}
