--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,6 +30,14 @@ body {
             font-size: 1rem;
         }
     }
+
+    .loading {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: $green;
+        z-index: 99999999;
+    }
 }
 
 ::-webkit-scrollbar-thumb {
