--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -296,9 +296,9 @@ h2{
 
 .MuiFormHelperText-root {
     color: $beige !important;
-    margin: 0;
+    margin: 0 !important;
     padding: 3px 10px 5px 10px;
-    line-height: 1;
+    line-height: 1 !important;
     background-color: $red;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
