--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -59,7 +59,7 @@
                 height: auto;
                 top: 0;
                 left: 50%;
-                transform: translateX(-50%);
+                // transform: translateX(-50%);
                 cursor: pointer;
                 @include tablet {
                     display: none;
