--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -5,6 +5,15 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+        position: relative;
+        .form_progress_overlay {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: transparentize($green, .6);
+            z-index: 9;
+            cursor: progress;
+        }
     }
 }
 
