--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -260,6 +260,63 @@ h2{
     }
 }
 
+//========loader styling start =========
+@keyframes ldio-o87y3w0la78 {
+    0% { opacity: 1 }
+    50% { opacity: .5 }
+    100% { opacity: 1 }
+  }
+.ldio-o87y3w0la78 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+	div {
+		position: relative;
+		width: 12%;
+		height: 60.4px;
+		top: 0;
+		animation: ldio-o87y3w0la78 0.7407407407407407s cubic-bezier(0.5,0,0.5,1) infinite;
+		box-sizing: content-box;
+        border-radius: 50%;
+		&:nth-child(1) {
+			//transform: translate(22.65px,0);
+			background: #000000;
+			animation-delay: -0.4444444444444444s;
+		}
+		&:nth-child(2) {
+			//transform: translate(52.85px,0);
+			background: #000000;
+			animation-delay: -0.2962962962962963s;
+		}
+		&:nth-child(3) {
+			//transform: translate(83.05px,0);
+			background: #000000;
+			animation-delay: -0.14814814814814814s;
+		}
+		&:nth-child(4) {
+			// transform: translate(113.25px,0);
+			background: #000000;
+			animation-delay: -0.7407407407407407s;
+		}
+	}
+	width: 100%;
+	height: 100%;
+	position: relative;
+	transform: translateZ(0) scale(1);
+	backface-visibility: hidden;
+	transform-origin: 0 0;
+}
+.loadingio-spinner-bars-rhbsl7mk1na {
+	width: 151px;
+	height: 151px;
+	display: inline-block;
+	overflow: hidden;
+	background: none;
+}
+
+//========loader styling end ===========
+
+
 
 //CONTACT FORM
 .MuiInputLabel-root{
