--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -42,3 +42,23 @@
         }
     }
 }
+
+.thankyou_popup {
+    position: fixed;
+    width: 80%;
+    max-width: 500px;
+    background: $red;
+    z-index: 10;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    box-shadow: 0 0 60px 20px transparentize(#000000, .7);
+    text-align: center;
+    div {
+        border: 2px solid $beige;
+        padding: 30px;
+        h2 {text-transform: uppercase;}
+        a {margin-top: 30px;}
+    }
+}
