--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -14,6 +14,14 @@
             z-index: 9;
             cursor: progress;
         }
+
+        .form_fields {
+            display: grid;
+            grid-gap: 30px;
+            @include desktop-only {
+                grid-template-columns: 1fr 1fr;
+            }
+        }
     }
 }
 
