working on production

--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -9,6 +9,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+
+    h3 {
+        text-align: center;
+        margin-top: 2rem;
+        background-color: $beige;
+        color: $green
+    }
 
     &::before{
         content: "";
