--- a/styles/WhoWeAre.module.scss
+++ b/styles/WhoWeAre.module.scss
@@ -29,3 +29,30 @@
         }
     }
 }
+
+.coaching_info {
+    .column {
+        padding-top: 100px;
+        padding-bottom: 100px;
+        @include tablet {
+            &:nth-child(even) {
+                background: transparentize(#000000, .82);
+            }
+        }
+        p {
+            &::before {
+                content: "";
+                position: relative;
+                top: 0;
+                height: 3px;
+                width: 50px;
+                background: $red;
+                display: flex;
+                margin: 30px 0;
+            }
+        }
+        a[target="_blank"]{
+            color: inherit;
+        }
+    }
+}
