qa update from russell

--- a/styles/PortfolioItem.module.scss
+++ b/styles/PortfolioItem.module.scss
@@ -31,7 +31,7 @@
                     padding-right: 10px;
                 }
 
-                > div { z-index: 9; } //image container div created by next/image
+                > span { z-index: 9; } //image container div created by next/image
                 .book_name{
                     position: absolute;
                     width: 100%;
