--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -14,8 +14,9 @@
     h3 {
         text-align: center;
         margin-top: 2rem;
-        background-color: $beige;
-        color: $green
+        // background-color: $beige;
+        // color: $green;
+        text-transform: uppercase;
     }
 
     &::before{
@@ -23,7 +24,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        background-color: transparentize($black, .7);
+        // background-color: transparentize($black, .7);
         z-index: -1;
     }
 
