--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -11,12 +11,13 @@
     justify-content: center;
     flex-direction: column;
 
-    h3 {
+    .hero_text {
         text-align: center;
-        margin-top: 2rem;
-        // background-color: $beige;
-        // color: $green;
         text-transform: uppercase;
+        margin-top: 30px;
+        h2 {
+            text-transform: initial;
+        }
     }
 
     &::before{
