--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -46,6 +46,10 @@ body {
         }
     }
 
+    em {
+        font-style: italic;
+    }
+
     .loading {
         position: fixed;
         width: 100%;
